--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,4 +1,13 @@
-h1 {
-   color: red;
-   font-size: 50px;
+@import "base/nullstyle";
+@import "base/variables";
+@import "base/media";
+@import "blocks/container";
+@import "blocks/initial";
+@import "blocks/header";
+@import "blocks/button";
+@import "blocks/advantages";
+
+* {
+   font-family: 'MuseoModerno', sans-serif;
 }
+
