added block Consultation

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,11 +1,13 @@
 @import "base/nullstyle";
 @import "base/variables";
-@import "base/media";
 @import "blocks/container";
 @import "blocks/initial";
 @import "blocks/header";
 @import "blocks/button";
 @import "blocks/advantages";
+@import "blocks/consultation";
+@import "blocks/forms";
+@import "base/media";
 
 * {
    font-family: 'MuseoModerno', sans-serif;
