--- a/src/sass/blocks/_button.scss
+++ b/src/sass/blocks/_button.scss
@@ -14,4 +14,11 @@
       height: 50px;
       font-size: 16px;
    }
+   &_form {
+      margin-top: 17px;
+      width: 100%;
+      height: 58px;
+      font-size: 16px;
+      font-weight: 500;
+   }
 }
