--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -7,6 +7,7 @@
 @import "blocks/advantages";
 @import "blocks/consultation";
 @import "blocks/forms";
+@import "blocks/carousel";
 @import "base/media";
 
 * {
