--- a/src/sass/base/_media.scss
+++ b/src/sass/base/_media.scss
@@ -30,6 +30,20 @@
          flex-wrap: wrap;
       }
    }
+   .reviews {
+      &__item {
+         margin-top: 25px;
+         flex-direction: column;
+         align-items: center;
+      }
+      &__wrapper {
+         margin-top: 20px;
+         width: 100%;
+         margin-top: 20px;
+         padding: 0;
+         text-align: center;
+      }
+   }
 }
 
 @media (max-width: 768px) {
@@ -113,6 +127,11 @@
          margin-top: 5px;
       }
    }
+   .reviews {
+      &__content {
+         font-size: 14px;
+      }
+   }
 }
 
 @media (max-width: 576px) {
@@ -160,5 +179,13 @@
    }
    .tns-outer {
       width: 300px;
+   }
+   .footer {
+      &__information {
+         width: 320px;
+      }
+      &__link {
+         margin: 0 9px;
+      }
    }
 }
