--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -10,6 +10,7 @@
 @import "blocks/carousel";
 @import "blocks/catalog";
 @import "blocks/reviews";
+@import "blocks/footer";
 @import "base/media";
 
 * {
