add Modal block

--- a/src/sass/blocks/_forms.scss
+++ b/src/sass/blocks/_forms.scss
@@ -11,4 +11,8 @@
       font-weight: 400;
       border-radius: 5px;
    }
+   &__modal-consultation {
+      margin: 0 auto;
+      padding-top: 26px;
+   }
 }
