--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,3 +1,7 @@
+* {
+   font-family: 'MuseoModerno', sans-serif;
+}
+
 @import "base/nullstyle";
 @import "base/variables";
 @import "blocks/container";
@@ -11,9 +15,7 @@
 @import "blocks/catalog";
 @import "blocks/reviews";
 @import "blocks/footer";
+@import "blocks/modal";
 @import "base/media";
 
-* {
-   font-family: 'MuseoModerno', sans-serif;
-}
 
