--- a/src/sass/blocks/_consultation.scss
+++ b/src/sass/blocks/_consultation.scss
@@ -16,4 +16,13 @@
       font-weight: 500;
       line-height: 30px; /* 150% */
    }
+   .error { // з validate form
+      border: 1px solid red;
+   }
+   label.error { // з validate form
+      color: $bgc_red;
+      margin: 5px 0 10px 0;
+      border: none;
+      text-align: center;
+   }
 }
