add Scrolling and Animation

--- a/src/sass/blocks/_advantages.scss
+++ b/src/sass/blocks/_advantages.scss
@@ -38,4 +38,9 @@
          text-decoration-line: underline;
       }
    }
+   &__picture {
+      &_pulse {
+         animation: heart 2s ease infinite; // назва анімації / швидкість анімації / тип анімації / кількість повторень
+      }
+   }
 }
